@@ -32,6 +32,14 @@ c - crash     b - bug fix    e - enhancement    f - new feature
       is not running.
   b - Fix for Bugzilla bug 36. "qsub crashes with long dependency list".
   b - Fix for Bugzilla bug 41. "tracejob creates a file in the local directory".
+  b - Made a fix to svr_get_privilege(). On some architectures a non-root user
+      name would be set to null after the line " host_no_port[num_host_chars] = 0;"
+      because num_host_chars was = 1024 which was the size of host_no_port. 
+      The null termination needed to happen at 1023. There were other problems
+      with this function so code was added to  validate the incoming
+      variables before they were used. The symptom of this bug was that non-root
+      managers and operators could not perform operations where they should 
+      have had rights.
 
 2.4.4
   b - fixed contrib/init.d/pbs_mom so that it doesn't overwrite $args defined in
